fixed text box overflow

--- a/signup.css
+++ b/signup.css
@@ -10,7 +10,7 @@
 }
 
 input {
-  /* width: 50%; */
+  width: 100%;
   display: block;
   margin : auto;
 }
